[tool.poetry]
name = "dagster-ubike"
version = "0.1.0"
description = "ubike dagster pipeline"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_ubike"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.2"
dagit = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
