[tool.poetry]
name = "dagster-youbike"
version = "0.1.0"
description = "youbike pipeline to showcase dagster"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_youbike"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
