[tool.poetry]
name = "dagster-youbike"
version = "0.1.0"
description = "youbike pipeline to showcase dagster"
authors = ["frankcholula <lu.phrank@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_youbike"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.2"
dagit = "^1.3.2"
dbt-postgres = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
